# userstyles

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc  .stylelintrc.js  .typos.toml  README.md  biome.jsonc  compile.js  compiled.json  deno.json  dom.html  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  renovate.json5  shell.nix  tsconfig.json  update_urls.py  userstyles.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  issue-labeler.yml  issues-labeler.yml  labeler.yml  labels.yml  pr-labeler.yml  pull_request_template.md
docs/: .gitignore  CONTRIBUTING.md  FAQ.md  README.md  SUMMARY.md  USAGE.md  astro.config.mjs  astro.config.ts  book.toml  browsers.md  deno.json  goals.md  how-to-write-a-userstyle.md  opera.md  oprea.md  package.json  pnpm-lock.yaml  port-creation.md  tips-and-tricks.md  userstyle-creation.md  userstylesyml.md
generate/: main.ts
git-scm/: catppuccin.user.less
lib/: fui.less  lib.less  m3.less  mediawiki.less  mui.less
nix/: default.nix  shell.nix
scripts/: _prettier.ts  constants.ts  css-variable-generator.js  deps.ts  logger.ts  palette.ts  sync-maintainers.ts  update-types.ts  usercss-meta.d.ts  userstyles.schema.json  userstyles.yml  utils.ts
src/: deno.json  deps.ts  types.d.ts  userstyles.schema.json  userstyles.yml
styles/: mozhi
styles/chess.com/scripts/: generate.py  pyproject.toml
styles/chess.com/scripts/generate/: pyproject.toml
styles/chess.com/scripts/generate/generate/: __init__.py
template/: catppuccin.user.css  (+1 more)
(+836 files in other folders)
