[tool.poetry]
name = "chess-com"
version = "0.1.0"
description = ""
authors = ["Nathan Solis <66754842+coldenate@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chess"}]

[tool.poetry.dependencies]
python = "^3.11"
boardinator = "^0.1.0"
catppuccin = "^1.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
