[tool.poetry]
name = "generate"
version = "0.1.0"
description = "Generate the board images for Chess.com Catppuccin."
authors = ["Catppuccin"]

[tool.poetry.scripts]
gen = "generate:generate_boards"

[tool.poetry.dependencies]
python = "^3.11"
boardinator = "^0.1.0"
catppuccin = "^2.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
